2010-06-16
- Set _NET_WM_ICON_GEOMETRY for every task

2010-06-12
- strut_policy=minimum is possible even if autohide is disabled

2010-06-11
- Added icons and a *.desktop file for tint2conf
- BSD fixes 

2010-06-09
- Add cmake build system

2010-06-08
- Xrandr and Nvidia problems fixed

2010-05-17
- Fix installation of examples

2010-05-15
- added panel theme switcher 'tint2conf'
  with preview of each theme based on current config (size of monitor, task opened, ...)
- include tintwizard : theme editor
- autodetect composite manager and switch to real or fake transparency
  this feature needed a patch to xcompmgr
  see FAQ http://code.google.com/p/tint2/wiki/FAQ#How_to_configure_real_transparency_(xcompmgr)
- added 'strut_policy = none'
- drag n drop task re-ordering


2010-01-28
- Battery hide option
- bugfixes in task redrawing
- traywindow and autohide bugfix


2010-01-13
- calculate right struts for multiple monitors
- New timer implementation (works for *BSD too)
- Changed behaviour for forwarding clicks to the window manager
- Tint2 sets a class name, such that it can be identified by window managers
- better omnipresent task handling
- clock timezone support
- real transparency
- adjustable systray icons
- systray: several icons in one line
- autohide
- more task states (active/urgent/iconified)
- and some minor bugfixes which nobody recognized yet ;)


2009-12-16
- Scrolling through tasks by schattenprinz (added action next_task and prev_task)
- Andreas : *add* setting tooltip on clock with 'clock_tooltip = format'
- Andreas : *add* changed everything to kernel timer for easier integration with new timer
- Andreas : *add* multiple tasks can be urgent now
- Thierry : panel snapshot
- patch for FULL battery by peter.ebden
- Thierry : work on tint2conf. not ready for release yet.
- Thierry : killall -SIGUSR1 tint2 will reload config file cleanly
- Thierry : improved multi-monitor detection